# riskkit

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
components/: index.html
docs/: components.md  index.md  integrations.md  quickstart.md
examples/: backtesting_py_strategy.py  backtesting_riskmanager.py  freqtrade_callbacks.py  multi_asset_book.py  pipeline.py  risk_manager.py  vectorbt_sizing.py
integrations/: index.html
quickstart/: index.html
search/: search_index.json
src/riskkit/: __init__.py  correlation.py  drawdown.py  manager.py  metrics.py  session.py  sizing.py  stops.py  validator.py
src/riskkit/adapters/: __init__.py  backtesting.py  freqtrade.py  vectorbt.py
tests/: test_adapter_backtesting.py  test_adapter_freqtrade.py  test_adapter_vectorbt.py  test_correlation.py  test_drawdown.py  test_manager.py  test_metrics.py  test_presets.py  test_properties.py  test_session.py  test_sizing.py  test_stops.py  test_validator.py
