[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskkit"
version = "0.2.0"
description = "A framework-agnostic risk-management toolkit for systematic traders: position sizing, drawdown laddering, and more."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hasib" }]
keywords = [
    "trading",
    "risk-management",
    "position-sizing",
    "kelly-criterion",
    "drawdown",
    "quant",
    "algotrading",
    "backtesting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
dev = ["pytest>=7.0", "pandas>=1.0"]
docs = ["mkdocs-material>=9.0"]

[project.urls]
Homepage = "https://github.com/USERNAME/riskkit"
Repository = "https://github.com/USERNAME/riskkit"
Issues = "https://github.com/USERNAME/riskkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/riskkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
