[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskkit-quant"
version = "0.4.2"
description = "A framework-agnostic risk-management toolkit for systematic traders: position sizing, drawdown laddering, and more."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hasib" }]
keywords = [
    "trading",
    "risk-management",
    "position-sizing",
    "kelly-criterion",
    "drawdown",
    "quant",
    "algotrading",
    "backtesting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
backtesting = ["backtesting>=0.3"]
yaml = ["pyyaml>=5.0"]
dev = ["pytest>=7.0", "pandas>=1.0", "backtesting>=0.3", "pyyaml>=5.0", "hypothesis>=6.0"]
docs = ["mkdocs-material>=9.0"]

[project.urls]
Homepage = "https://github.com/HasibVortex369/riskkit"
Repository = "https://github.com/HasibVortex369/riskkit"
Issues = "https://github.com/HasibVortex369/riskkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/riskkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
